force-app/main/default/objects/PS_ASU_SP_TRNSFR_V__x/PS_ASU_SP_TRNSFR_V__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/1EeZWZpJHLU3B1d-Vsr5xvtlz9u4BggL7wPHobkqEU3c/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>PS_ASU_SP_TRNSFR_Vs</externalName>
    <label>Transfer Class By Exam (external)</label>
    <pluralLabel>Transfer Class By Exam (external)</pluralLabel>
</CustomObject>