force-app/main/default/objects/PS_ASU_SP_TRNSFR_V__x/fields/COURSE_TITLE__c.field-meta.xml
<CustomField>
    <fullName>COURSE_TITLE__c</fullName>
    <description>Data sourced from PS_CRSE_CAT_TC_VW.SUBJECT_SRCH, CATALOG_NBR_SRCH</description>
    <externalDeveloperName>COURSE_TITLE</externalDeveloperName>
    <label>Course Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>