force-app/main/default/objects/PS_ASU_SP_TRNSFR_V__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from PS_TRNS_TEST_DTL.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transfer Class By Exam (external)</relationshipLabel>
    <relationshipName>Transfer_Class_By_Exam_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>