force-app/main/default/objects/PS_ASU_SP_TRNSFR_V__x/fields/SCORE__c.field-meta.xml
<CustomField>
    <fullName>SCORE__c</fullName>
    <description>Data sourced from PS_TRNS_TEST_DTL.SCORE</description>
    <externalDeveloperName>SCORE</externalDeveloperName>
    <label>Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>