force-app/main/default/objects/PS_ASU_SP_TRNSFR_V__x/fields/STRM__c.field-meta.xml
<CustomField>
    <fullName>STRM__c</fullName>
    <description>Data sourced from PS_TRNS_TEST_DTL.ARTICULATION_TERM</description>
    <externalDeveloperName>STRM</externalDeveloperName>
    <label>Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Transfer Class By Exam (external)</relationshipLabel>
    <relationshipName>Transfer_Class_By_Exam_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>