force-app/main/default/objects/PS_ASU_SP_TRNSFR_V__x/fields/TITLE__c.field-meta.xml
<CustomField>
    <fullName>TITLE__c</fullName>
    <description>Data sourced from PS_CRSE_CAT_TC_VW.DESCR</description>
    <externalDeveloperName>TITLE</externalDeveloperName>
    <label>Course Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>