force-app/main/default/objects/PS_ASU_SP_TRNSFR_V__x/fields/UNT_TRNSFR__c.field-meta.xml
<CustomField>
    <fullName>UNT_TRNSFR__c</fullName>
    <description>Data sourced from PS_TRNS_TEST_DTL.UNT_TRNSFR</description>
    <externalDeveloperName>UNT_TRNSFR</externalDeveloperName>
    <label>Units Transferred</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>